--- a/specification/batch/data-plane/Microsoft.Batch/stable/2021-06-01.14.0/examples/PoolAdd_VirtualMachineConfigurationWithExtensions.json
+++ b/specification/batch/data-plane/Microsoft.Batch/stable/2021-06-01.14.0/examples/PoolAdd_VirtualMachineConfigurationWithExtensions.json
@@ -13,7 +13,18 @@
           "offer": "0001-com-ubuntu-server-focal",
           "sku": "20_04-lts"
         },
-        "nodeAgentSKUId": "batch.node.ubuntu 20.04"
+        "nodeAgentSKUId": "batch.node.ubuntu 20.04",
+        "extensions": [
+          {
+            "name": "batchextension1",
+            "type": "SecurityMonitoringForLinux",
+            "publisher": "Microsoft.Azure.Security.Monitoring",
+            "typeHandlerVersion": "1.0",
+            "autoUpgradeMinorVersion": true,
+            "settings": "{\"settingsKey\":\"settingsValue\"}",
+            "protectedSettings": "{\"protectedSettingsKey\":\"protectedSettingsValue\"}"
+          }
+        ]
       },
       "resizeTimeout": "PT15M",
       "targetDedicatedNodes": 5,
