--- a/specification/batch/data-plane/Microsoft.Batch/stable/2021-06-01.14.0/examples/PoolAdd_MountConfiguration.json
+++ b/specification/batch/data-plane/Microsoft.Batch/stable/2021-06-01.14.0/examples/PoolAdd_MountConfiguration.json
@@ -52,8 +52,7 @@
       ],
       "resizeTimeout": "PT15M",
       "targetDedicatedNodes": 5,
-      "targetSpotNodes": 0,
-      "maxSpotPrice": -1,
+      "targetLowPriorityNodes": 0,
       "taskSlotsPerNode": 3,
       "taskSchedulingPolicy": {
         "nodeFillType": "spread"
