--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalVirtualMachineConfiguration.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalVirtualMachineConfiguration.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "default-azurebatch-japaneast",
     "accountName": "sampleacct",
     "poolName": "testpool",
-    "api-version": "2021-01-01",
+    "api-version": "2021-06-01",
     "parameters": {
       "properties": {
         "vmSize": "STANDARD_D4",
@@ -69,7 +69,8 @@
             }
           },
           "currentDedicatedNodes": 0,
-          "currentLowPriorityNodes": 0
+          "currentSpotNodes": 0,
+          "maxSpotPrice": -1
         }
       }
     }
