--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalCloudServiceConfiguration.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalCloudServiceConfiguration.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "default-azurebatch-japaneast",
     "accountName": "sampleacct",
     "poolName": "testpool",
-    "api-version": "2021-01-01",
+    "api-version": "2021-06-01",
     "parameters": {
       "properties": {
         "vmSize": "STANDARD_D4",
@@ -53,12 +53,12 @@
           "scaleSettings": {
             "fixedScale": {
               "targetDedicatedNodes": 3,
-              "targetLowPriorityNodes": 0,
+              "targetSpotNodes": 0,
               "resizeTimeout": "PT15M"
             }
           },
           "currentDedicatedNodes": 0,
-          "currentLowPriorityNodes": 0,
+          "currentSpotNodes": 0,
           "resizeOperationStatus": {
             "startTime": "2017-08-28T10:22:55.9407275Z",
             "targetDedicatedNodes": 3,
