--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolGet_VirtualMachineConfiguration_Extensions.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolGet_VirtualMachineConfiguration_Extensions.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "default-azurebatch-japaneast",
     "accountName": "sampleacct",
     "poolName": "testpool",
-    "api-version": "2021-01-01"
+    "api-version": "2021-06-01"
   },
   "responses": {
     "200": {
@@ -32,27 +32,27 @@
           "scaleSettings": {
             "fixedScale": {
               "targetDedicatedNodes": 6,
-              "targetLowPriorityNodes": 28,
+              "targetSpotNodes": 28,
               "resizeTimeout": "PT8M"
             }
           },
           "resizeOperationStatus": {
             "startTime": "2017-08-28T10:22:55.9407275Z",
             "targetDedicatedNodes": 6,
-            "targetLowPriorityNodes": 28,
+            "targetSpotNodes": 28,
             "nodeDeallocationOption": "TaskCompletion",
             "resizeTimeout": "PT8M"
           },
           "currentDedicatedNodes": 0,
-          "currentLowPriorityNodes": 0,
+          "currentSpotNodes": 0,
           "deploymentConfiguration": {
             "virtualMachineConfiguration": {
               "imageReference": {
                 "publisher": "Canonical",
-                "offer": "UbuntuServer",
-                "sku": "16.04.0-LTS"
+                "offer": "0001-com-ubuntu-server-focal",
+                "sku": "20_04-lts"
               },
-              "nodeAgentSkuId": "batch.node.ubuntu 16.04",
+              "nodeAgentSkuId": "batch.node.ubuntu 20.04",
               "extensions": [
                 {
                   "name": "batchextension1",
