--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_VirtualMachineConfiguration.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_VirtualMachineConfiguration.json
@@ -88,8 +88,7 @@
             "formula": "$TargetDedicatedNodes=1",
             "evaluationInterval": "PT5M"
           }
-        },
-        "maxSpotPrice": -1
+        }
       }
     }
   },
@@ -193,8 +192,7 @@
             }
           },
           "currentDedicatedNodes": 0,
-          "currentSpotNodes": 0,
-          "maxSpotPrice": -1
+          "currentLowPriorityNodes": 0
         }
       }
     }
