--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolGet_VirtualMachineConfiguration_Extensions.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolGet_VirtualMachineConfiguration_Extensions.json
@@ -32,19 +32,19 @@
           "scaleSettings": {
             "fixedScale": {
               "targetDedicatedNodes": 6,
-              "targetSpotNodes": 28,
+              "targetLowPriorityNodes": 28,
               "resizeTimeout": "PT8M"
             }
           },
           "resizeOperationStatus": {
             "startTime": "2017-08-28T10:22:55.9407275Z",
             "targetDedicatedNodes": 6,
-            "targetSpotNodes": 28,
+            "targetLowPriorityNodes": 28,
             "nodeDeallocationOption": "TaskCompletion",
             "resizeTimeout": "PT8M"
           },
           "currentDedicatedNodes": 0,
-          "currentSpotNodes": 0,
+          "currentLowPriorityNodes": 0,
           "deploymentConfiguration": {
             "virtualMachineConfiguration": {
               "imageReference": {
