--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalCloudServiceConfiguration.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalCloudServiceConfiguration.json
@@ -53,12 +53,12 @@
           "scaleSettings": {
             "fixedScale": {
               "targetDedicatedNodes": 3,
-              "targetSpotNodes": 0,
+              "targetLowPriorityNodes": 0,
               "resizeTimeout": "PT15M"
             }
           },
           "currentDedicatedNodes": 0,
-          "currentSpotNodes": 0,
+          "currentLowPriorityNodes": 0,
           "resizeOperationStatus": {
             "startTime": "2017-08-28T10:22:55.9407275Z",
             "targetDedicatedNodes": 3,
