--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalVirtualMachineConfiguration.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_MinimalVirtualMachineConfiguration.json
@@ -69,8 +69,7 @@
             }
           },
           "currentDedicatedNodes": 0,
-          "currentSpotNodes": 0,
-          "maxSpotPrice": -1
+          "currentLowPriorityNodes": 0
         }
       }
     }
