--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_VirtualMachineConfiguration_Extensions.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2021-06-01/examples/PoolCreate_VirtualMachineConfiguration_Extensions.json
@@ -72,8 +72,7 @@
             }
           },
           "currentDedicatedNodes": 0,
-          "currentSpotNodes": 0,
-          "maxSpotPrice": -1,
+          "currentLowPriorityNodes": 0,
           "deploymentConfiguration": {
             "virtualMachineConfiguration": {
               "imageReference": {
